# mpi_tutorials

./: README.md
src/: CMakeLists.txt  auxiliary.h  main.cpp
